--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,14 @@ mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true # 开启驼峰命名转换
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 开发环境开启SQL日志打印
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    tags-sorter: alpha
+    operations-sorter: alpha
+  api-docs:
+    path: /v3/api-docs
+  group-configs:
+      group: 'default'
+      paths-to-match: '/**'
+      packages-to-scan: com.cdp.zwy.buildbody.module.**
