--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,17 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.12.0</version>
+        </dependency>
+
         <!-- Source: https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
 
     </dependencies>
